apps/downloader/radarr/k8s.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: radarr
  namespace: downloader
  annotations:
    argocd.argoproj.io/sync-wave: "30"
  labels:
    app.kubernetes.io/name: radarr
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app.kubernetes.io/name: radarr
  template:
    metadata:
      labels:
        app.kubernetes.io/name: radarr
    spec:
      nodeSelector:
        node-role/workload: zfs
      containers:
      - name: radarr
        image: forge.geekbundle.org/madic/docker-radarr@sha256:9ee2f37426af4455d6750cb52d20840d158c98b5b0a0d5d01f34b472f3f733ba
        resources:
          requests:
            cpu: 100m
            memory: 384Mi
        ports:
          - containerPort: 7878
            name: http
            protocol: TCP
        volumeMounts:
          - name: config
            mountPath: /config
          - name: video
            mountPath: /vol_raidz1/video
          - name: music
            mountPath: /vol_raidz1/music
          - name: photo
            mountPath: /vol_raidz1/photo
          - name: downloads
            mountPath: /vol_raidz1/downloads
          - name: trailer-config
            mountPath: /opt/Trailer-Downloader/settings.ini
            subPath: settings.ini
            readOnly: true
      volumes:
        - name: config
          hostPath:
            path: /vol_raidz1/docker/configs/downloader/radarr/config
            type: Directory
        - name: video
          hostPath:
            path: /vol_raidz1/video
            type: Directory
        - name: music
          hostPath:
            path: /vol_raidz1/music
            type: Directory
        - name: photo
          hostPath:
            path: /vol_raidz1/photo
            type: Directory
        - name: downloads
          hostPath:
            path: /vol_raidz1/downloads
            type: Directory
        - name: trailer-config
          hostPath:
            path: /vol_raidz1/docker/configs/downloader/Trailer-Downloader-Config
            type: Directory
