apps/downloader/radarr/k8s.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: radarr
  namespace: downloader
  annotations:
    argocd.argoproj.io/sync-wave: "30"
  labels:
    app.kubernetes.io/name: radarr
spec:
  type: ClusterIP
  ports:
    - port: 7878
      targetPort: 7878
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: radarr
