apps/downloader/radarr/k8s.np.radarr.yaml
---
# Radarr Network Policy
# Controls network access for Radarr movie management
# Radarr needs to communicate with indexers (via NZBHydra2) and download clients (NZBGet)
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: radarr
  namespace: downloader
  annotations:
    argocd.argoproj.io/sync-wave: "30"
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: radarr
  ingress:
  # Allow Traefik to reach Radarr service via Ingress
  - fromEndpoints:
    - matchLabels:
        k8s:app.kubernetes.io/instance: traefik-kube-system
        k8s:io.kubernetes.pod.namespace: kube-system
    toPorts:
    - ports:
      - port: "7878"
        protocol: TCP
  # Allow other downloader apps to communicate with Radarr API
  - fromEndpoints:
    - matchLabels:
        k8s:io.kubernetes.pod.namespace: downloader
    toPorts:
    - ports:
      - port: "7878"
        protocol: TCP
  egress:
  # Allow DNS resolution via CoreDNS
  - toEndpoints:
    - matchLabels:
        k8s:io.cilium.k8s.namespace.labels.kubernetes.io/metadata.name: kube-system
        k8s:io.kubernetes.pod.namespace: kube-system
        k8s:k8s-app: kube-dns
    toPorts:
    - ports:
      - port: "53"
        protocol: UDP
      - port: "53"
        protocol: TCP
  # Allow HTTPS connections to external metadata APIs (TMDB, Trakt, etc.)
  - toEntities:
    - world
    toPorts:
    - ports:
      - port: "443"
        protocol: TCP
      - port: "80"
        protocol: TCP
  # Allow communication with NZBGet in downloader namespace
  - toEndpoints:
    - matchLabels:
        k8s:io.kubernetes.pod.namespace: downloader
        k8s:app.kubernetes.io/name: nzbget
    toPorts:
    - ports:
      - port: "6789"
        protocol: TCP
  # Allow communication with NZBHydra2 in downloader namespace
  - toEndpoints:
    - matchLabels:
        k8s:io.kubernetes.pod.namespace: downloader
        k8s:app.kubernetes.io/name: nzbhydra2
    toPorts:
    - ports:
      - port: "5076"
        protocol: TCP
  # Allow communication with Trailarr in downloader namespace
  - toEndpoints:
    - matchLabels:
        k8s:io.kubernetes.pod.namespace: downloader
        k8s:app.kubernetes.io/name: trailarr
    toPorts:
    - ports:
      - port: "7889"
        protocol: TCP
  # Allow communication with emby in media namespace
  - toEndpoints:
    - matchLabels:
        k8s:io.kubernetes.pod.namespace: media
        k8s:app.kubernetes.io/name: emby
    toPorts:
    - ports:
      - port: "8920"
        protocol: TCP
